@@ -1,20 +1,24 @@
 package uom.msd.lostfound.auth;
 
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
+import uom.msd.lostfound.enums.Role;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 public class AuthenticatedUser implements UserDetails {
     private final Long id;
     private final String username;
     private final String email;
+    private final Role role;
 
-    public AuthenticatedUser(Long id, String username, String email) {
+    public AuthenticatedUser(Long id, String username, String email, Role role) {
         this.id = id;
         this.username = username;
         this.email = email;
+        this.role = role;
     }
 
     public Long getId() {
@@ -25,9 +29,13 @@ public class AuthenticatedUser implements UserDetails {
         return email;
     }
 
+    public Role getRole() {
+        return role;
+    }
+
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority("ROLE_" + role.name()));
     }
 
     @Override
